@@ -29,7 +29,14 @@
                         <ul id="categories-list" class="dropdown-menu">
                         </ul>
                     </li>
-                    <li><a href="mailto:chrisg@ire.org?subject=PANDA Project Feedback (version {{ settings.PANDA_VERSION }})">Send PANDA feedback (version {{ settings.PANDA_VERSION }})</a></li>
+                    <li id="navbar-help" class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Help <b class="caret"></b></a>
+                        <ul id="help-list" class="dropdown-menu">
+                            <li><a href="http://panda.readthedocs.org/en/{{ settings.PANDA_VERSION }}/index.html">Read the documentation</a></li>
+                            <li><a href="https://groups.google.com/forum/?fromgroups#!forum/panda-project-users">Ask a question on the user group</a></li>
+                            <li><a href="mailto:chrisg@ire.org?subject=PANDA Project Feedback (version {{ settings.PANDA_VERSION }})">Email feedback on PANDA version {{ settings.PANDA_VERSION }}</a></li>
+                        </ul>
+                    </li>
                 </ul>
                 <ul class="nav pull-right">
                     <li id="navbar-email"><a href="javascript:alert('User Profile (TODO)');"></a></li>
