@@ -1,6 +1,9 @@
 0.1.3
 -----
 
+* Add documentation links to the header of the app. (#623)
+* Reorganize documentation so users come first. (#624)
+* Add metrics dashboard.
 * Fix long-standing bug where dataset metadata might not get created. (#618)
 * Intelligently handle currency symbols in numeric columns. (#538)
 * Ensure related files are deleted when datasets are. (#612)
